# wondoner-plugin-github

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  python-test.yml
src/wondoner/plugin_github/: __init__.py  client.py  mapping.py  plugin.py
tests/: test_client.py  test_mapping.py  test_plugin.py
